# computer-connection-kpi-dashboard

./: .env.sample  .gitignore  README.md  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml  post-cycle-report.yml  post_cycle_report.yml  protect-readme.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/actions/: router.py
backend/app/api/graphql/: router.py  schema.py
backend/app/audit/: __init__.py  router.py  service.py
backend/app/auth/: middleware.py  router.py  service.py
backend/app/middleware/: ratelimit.py
backend/app/services/: kpi_service.py
backend/tests/: actions_test.py  auth_test.py  graphql_test.py
docs/: architecture.md  kpi-formulas.md  ops-runbook.md
etl/: Dockerfile
etl/flows/: lightspeed_flow.py  mock_flow.py
etl/mocks/: sample.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  main.tsx  router.tsx
frontend/src/components/: DateRangeControls.tsx  KpiCard.tsx  TableGrid.tsx  TimeSeriesChart.tsx  tableUtils.ts
frontend/src/components/charts/: ChartWrapper.tsx  chartUtils.test.ts  chartUtils.ts
frontend/src/components/widgets/: KpiCard.tsx
frontend/src/lib/: graphql.ts
frontend/src/pages/: App.tsx  Layout.tsx  Personal.tsx  Quotes.tsx  Repairs.tsx  Sales.tsx
frontend/src/store/: hooks.ts  prefs.test.ts  prefs.ts  theme.test.tsx  theme.ts
frontend/src/utils/: export.ts
infra/: Caddyfile
infra/db/: init.sql
scripts/: backup.ps1  dev_up.ps1  generate_self_signed_cert.ps1  post_cycle_report.py  restore.ps1  seed_mock_data.py  task_backup.xml
